Removing unneeded packages and prettifying.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "react-scripts": "^3.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -33,7 +31,11 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx}": ["eslint", "pretty-quick — staged", "git add"]
+    "src/**/*.{js,jsx}": [
+      "eslint",
+      "pretty-quick — staged",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
