--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.3.1",
+    "i18next": "^17.0.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1"
   },
